fix: scroll and jump

--- a/css/style.css
+++ b/css/style.css
@@ -2069,3 +2069,6 @@ margin-bottom: 35px !important;
     }
 
 /**/
+  .fixed-container {
+		margin-top: 104px;
+	}
